add update player operation
